--- a/meltdown_spectre/provisioning/roles/drupal.role/handlers/main.yml
+++ b/meltdown_spectre/provisioning/roles/drupal.role/handlers/main.yml
@@ -1,2 +1,4 @@
 ---
-# handlers file for demo.role
+# handlers file for drupal.role
+- name: restart apache
+  service: name=apache2 state=restarted
