enabled clean urls for drupal

--- a/meltdown_spectre/provisioning/roles/drupal.role/files/000-default.conf
+++ b/meltdown_spectre/provisioning/roles/drupal.role/files/000-default.conf
@@ -16,7 +16,7 @@
          </Directory>
         <Directory /home/vagrant/drupal-7.56/>
                 Options Indexes FollowSymLinks MultiViews
-                AllowOverride None
+                AllowOverride All
                 Require all granted
           </Directory>
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
