--- a/meltdown_spectre/provisioning/roles/drupal.role/tasks/main.yml
+++ b/meltdown_spectre/provisioning/roles/drupal.role/tasks/main.yml
@@ -20,12 +20,12 @@
 
   - name: downloading the last version of drupal into a folder
     command: >
-      drush dl drupal
+      drush dl drupal-7.57
       
   - name: Install Drupal with drush
     ignore_errors: yes
     command: >
-      sudo drush -y site-install --db-url=mysql://root:root@localhost:3306/drupaldb --root="/home/vagrant/drupal-7.56"
+      sudo drush -y site-install --db-url=mysql://root:root@localhost:3306/drupaldb --root="/home/vagrant/drupal-7.57"
 
   - name: Copy vhost
     copy: src=files/000-default.conf dest=/etc/apache2/sites-available/000-default.conf
