added vmstat results, cpu usage graph, request per second graph, seperate loadgenerator machine + disabled retpoline mitigation

--- a/meltdown_spectre/provisioning/playbook.yml
+++ b/meltdown_spectre/provisioning/playbook.yml
@@ -5,9 +5,12 @@
     roles:
        - mysql.role
        - drupal.role
-       - benchmark.role
        
   - hosts: webvulnerable
     roles:
       - pti.role
+
+  - hosts: loadgenerator
+    roles:
+      - benchmark.role
 
