--- a/meltdown_spectre/Vagrantfile
+++ b/meltdown_spectre/Vagrantfile
@@ -75,6 +75,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
       ansible.compatibility_mode = 'auto'
+  #    ansible.verbose = "vvvv"
       ansible.playbook = "provisioning/playbook.yml"
       ansible.inventory_path = "provisioning/inventory"
 #      ansible.become = true
