--- a/meltdown_spectre/provisioning/roles/drupal.role/tasks/setup_apache.yml
+++ b/meltdown_spectre/provisioning/roles/drupal.role/tasks/setup_apache.yml
@@ -6,3 +6,8 @@
   - name: install apache to latest version
     become: yes
     apt: name=apache2 state=latest
+
+  - name: Enable service apache
+    service:
+      name: apache2
+      enabled: yes
