--- a/meltdown_spectre/provisioning/roles/redis.role/defaults/main.yml
+++ b/meltdown_spectre/provisioning/roles/redis.role/defaults/main.yml
@@ -1,2 +1,11 @@
 ---
 # defaults file for redis.role
+
+redis_port: 6379
+redis_bind: 0.0.0.0
+#redis_bind: 127.0.0.1
+syslog_bool: "yes"
+databases: 16
+dbfilename: dump.rdb
+requirepass: false
+redis_pass: None
