--- a/meltdown_spectre/Vagrantfile
+++ b/meltdown_spectre/Vagrantfile
@@ -64,6 +64,7 @@ Vagrant.configure("2") do |config|
   
      # Customize the amount of memory on the VM:
      vb.memory = "1024"
+     vb.cpus = 4
    end
 
   # config.vm.provision "shell", inline: <<-SHELL
